# AndroidSecureTools-AST

./: README.md  settings.gradle
AndroidSecureTools/: build.gradle
AndroidSecureTools/include/crypto/: md32_common.h  x509.h
AndroidSecureTools/include/openssl/: ec.h  engine.h  lhash.h  obj_mac.h  rsa.h  tls1.h
AndroidSecureTools/src/androidTest/java/com/ast/: AesTest.kt  ExampleInstrumentedTest.kt  HashTest.kt  RsaTest.kt
AndroidSecureTools/src/main/: AndroidManifest.xml
AndroidSecureTools/src/main/cpp/: CMakeLists.txt  Rsa.cpp  RsaConnector.cpp  RsaInteractor.cpp  Utils.cpp  native-lib.cpp
AndroidSecureTools/src/main/cpp/aes/: aes.cpp  aes.h  aesInteractor.cpp  aesResults.cpp  aesResults.h
AndroidSecureTools/src/main/cpp/hash/: hash.cpp  hashInteractor.cpp  md5Impl.cpp  md5Interactor.cpp
AndroidSecureTools/src/main/cpp/utils/: utils.cpp  utils.h
AndroidSecureTools/src/main/java/com/ast/: AstRsa.kt
AndroidSecureTools/src/main/java/com/ast/aes/: AesKeyType.kt  AstAes.kt  Cipher.kt
AndroidSecureTools/src/main/java/com/ast/aes/models/: AesKeyGenResult.kt
AndroidSecureTools/src/main/java/com/ast/hash/: AstHash.kt  AstMd5.kt
AndroidSecureTools/src/main/java/com/ast/hash/models/: HashResult.kt  Md5Result.kt
AndroidSecureTools/src/main/java/com/ast/rsa/: AstRsa.kt  RsaKeyLength.kt  RsaKeyType.kt
AndroidSecureTools/src/main/java/com/ast/rsa/models/: RsaKeys.kt
AndroidSecureTools/src/main/java/com/ast/utils/: RsaKeyLength.kt
AndroidSecureTools/src/main/jniLibs/x86_64/: libcrypto.so.1.1  libssl.so.1.1
AndroidSecureTools/src/test/java/com/ast/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/ast/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ast/sample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ast/sample/: ExampleUnitTest.kt
cryptopp/: Android.mk  GNUmakefile-cross  config.h  cryptest-android.sh
gradle/wrapper/: gradle-wrapper.properties
